# SerenDipity-Application.github.io

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
backend/: .env.example  config.py  database.py  main.py  pyproject.toml  serendipity.db
backend/api/: auth.py  dms.py  notifications.py  users.py
backend/models/: __init__.py  user.py
backend/services/: auth.py  email.py
backend/static/: index.html
backend/static/assets/: index-2zFJO5-m.css  index-B0tBYrJh.js  index-BA0fRV55.js  index-BMJ85ijV.css  index-Cr9rwGIc.css  index-DjvZ5jjP.js  index-vRNVQ28Y.js
src/: App.css  App.jsx  AuthContext.jsx  LangContext.jsx  api.js  data.js  firebase.js  firestoreDms.js  firestoreNotifications.js  firestoreUsers.js  i18n.js  index.css  main.jsx  mbti.js  notifications.js  userStorage.js
src/pages/: AIChatPage.css  AIChatPage.jsx  AdminPage.css  AdminPage.jsx  AuthPage.css  AuthPage.jsx  ChatPage.css  ChatPage.jsx  DirectMessagePage.css  DirectMessagePage.jsx  DirectoryPage.css  DirectoryPage.jsx  EntryPage.css  EntryPage.jsx  IcebreakerPage.css  IcebreakerPage.jsx  IntroPage.css  IntroPage.jsx  InvitationsPage.css  InvitationsPage.jsx  MessagesPage.css  MessagesPage.jsx  MyProfilePage.css  MyProfilePage.jsx  OnboardingPage.css  OnboardingPage.jsx  ProfilePage.css  ProfilePage.jsx
