[project]
name = "serendipity-backend"
version = "0.1.0"
description = "SerenDipity API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "pydantic[email]>=2.10.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "watchfiles>=0.24.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
